adding IMDb data and how it was processed

--- a/001_loading_data.ipynb
+++ b/001_loading_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,10 +67,10 @@
    "source": [
     "startTime = datetime.now()\n",
     "\n",
-    "data = formatting_data('netflix-prize-data/combined_data_1.txt')\n",
-    "data += formatting_data('netflix-prize-data/combined_data_2.txt')\n",
-    "data += formatting_data('netflix-prize-data/combined_data_3.txt')\n",
-    "data += formatting_data('netflix-prize-data/combined_data_4.txt')\n",
+    "data = formatting_data('raw-data/combined_data_1.txt')\n",
+    "data += formatting_data('raw-data/combined_data_2.txt')\n",
+    "data += formatting_data('raw-data/combined_data_3.txt')\n",
+    "data += formatting_data('raw-data/combined_data_4.txt')\n",
     "\n",
     "df_netflix = pd.DataFrame(data, columns = ['movie_id', 'user_id', 'rating', 'rating_date'])\n",
     "df_netflix.to_csv('netflix-prize-data/netflix_data.csv')\n",
@@ -246,6 +246,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading raw data from https://datasets.imdbws.com/:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_imdb_ratings = pd.read_csv('raw-data/title.ratings.tsv', sep = '\\t', na_values=['\\\\N'])\n",
+    "df_imdb_titles = pd.read_csv('raw-data/title.basics.tsv', sep = '\\t', na_values=['\\\\N'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keeping only movies and series:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_imdb_titles = df_imdb_titles[df_imdb_titles.titleType.isin(['movie', 'tvSeries'])][['tconst', 'titleType', 'primaryTitle', 'startYear', 'genres']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merging both sets, removing rows with no rating, genre or startYear, and adding weighted average:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_imdb = df_imdb_titles.merge(df_imdb_ratings, how='left', left_on='tconst', right_on='tconst')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_imdb['titleType'] = df_imdb['titleType'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_imdb = df_imdb.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_imdb['weightedAverage'] = df_imdb['averageRating']*df_imdb['numVotes']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Storing final IMDb dataframe in the Data directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_imdb.to_csv('data/imdb_df.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Storing set of possible genres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genres_raw = list(df_imdb['genres'].unique())\n",
+    "genres = set([element for item in genres_raw for element in item.split(',')])\n",
+    "with open('data/set_genres.pkl', 'wb') as f:\n",
+    "    pickle.dump(genres, f, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -265,6 +376,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# FILTER BY GENRE AND YEAR AND GET TOP 10\n",
+    "#Loading IMDb dataframe\n",
+    "#df_imdb = pd.read_csv('data/imdb_df.csv', sep = ',', header = 0)\n",
+    "#Loading possible genres, not used in this cell\n",
+    "#with open('data/set_genres.pkl', 'rb') as f:\n",
+    "#    genres = pickle.load(f)\n",
+    "\n",
+    "#genre = 'Drama'\n",
+    "#selected_year = 2020\n",
+    "#selected_type = 'movie'\n",
+    "#df_filtered = df_imdb[(df_imdb['genres'].str.contains(genre)) & (df_imdb['startYear'] == selected_year) & (df_imdb['titleType'] == selected_type)]\n",
+    "#df_filtered.nlargest(10,'weightedAverage')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#HOW TO RECOMMEND TOP 10 MOVIES\n",
     "#Loading movie titles\n",
     "#movie_titles = pd.read_csv('data/movie_titles.csv', sep = ',', names = ['movie_id', 'year_released', 'title'], index_col = 'movie_id', encoding = 'iso8859_2')\n",
@@ -277,6 +408,28 @@
     "#base_movie_id = 28\n",
     "\n",
     "#movie_titles.loc[dict_rec[base_movie_id][:10]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some movie IDs to try the recommendation:  \n",
+    "* 28: Lilo and Stitch  \n",
+    "* 121: Beyonce  \n",
+    "* 299: Bridget Jones's Diary  \n",
+    "* 316: Futurama  \n",
+    "* 409: Godzilla  \n",
+    "* 607: Speed  \n",
+    "* 621: Armageddon  \n",
+    "* 1542: Sleepless in Seattle  \n",
+    "* 2660: When Harry Met Sally  \n",
+    "* 6287: Pretty Woman  \n",
+    "* 6797: The Breakfast Club  \n",
+    "* 11283: Forrest Gump  \n",
+    "* 13763: Jerry Maguire  \n",
+    "* 14928: Dead Poets Society  \n",
+    "* 16879: Titanic  "
    ]
   }
  ],
