getting the data from the code and making using PIP8 standard

--- a/001_loading_data.ipynb
+++ b/001_loading_data.ipynb
@@ -407,7 +407,7 @@
     "\n",
     "#base_movie_id = 28\n",
     "\n",
-    "#movie_titles.loc[dict_rec[base_movie_id][:10]]"
+    "#movie_titles.loc[dict_rec[base_movie_id][0][:10]] #I changed it so I access the first array for that key"
    ]
   },
   {
